redirect to dashbord without password4

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             Login to continue
           </div>
           <div class="card-body">
-            <form>
+            <form action="dash.html">
               <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="user_name" placeholder="johndoe" autofocus>
                 <label for="user_name">Username</label>
